Removed uncessary css imports

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,9 +1,4 @@
-
-@import url("https://fonts.googleapis.com/css?family=Economica");
-@import url("https://fonts.googleapis.com/css?family=Bigshot+One");
-
-
-
+/*
 #map-container {
   height: 90%;
   width: 68%;
@@ -332,3 +327,4 @@ h1 {
 
 
 
+*/
