--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -521,3 +521,342 @@
     height: 20%;
 }
 
+
+/*--------------------*/
+/*   Farmers Market List    */ 
+/*--------------------*/
+
+
+
+#map-container {
+  height: 90%;
+  width: 68%;
+  padding: 5px;
+  margin: 5px;
+  margin-top: -0.5%;
+  float: right;
+  z-index: 1000;
+  display: flex;
+  position: fixed;
+  margin-left: 31.5%;
+}
+
+#legend {
+  position: sticky;
+  width: 60px;
+  font-family: Arial, sans-serif;
+  background: #fff;
+  padding: 5px;
+  margin: -300px 0px 0px -460px;
+  border: 2px solid #000;
+  z-index: 150;
+}
+#legend h3 {
+  margin-top: 10px;
+}
+#legend img {
+  vertical-align: top;
+}
+
+.logo {
+  float: left;
+  color: #1cac83;
+  padding: 15px;
+  list-style: none;
+  width: 10%;
+
+  height: 10%;
+}
+#logo-size {
+  height: 12%;
+  width: 10%;
+}
+
+.logo-div {
+  display: inline;
+}
+
+.burger {
+  display: block;
+  list-style-type: none;
+  background: #000;
+  margin-top: -10px;
+}
+.burger ul {
+  text-align: center;
+}
+.li {
+  display: inline-block;
+  width: 15%;
+  list-style: none;
+  background: #000;
+  color: #fff;
+}
+.burger li a {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  color: #fff;
+  transition: 0.8s;
+}
+.burger li a:hover {
+  background: #1cac83;
+  color: #fff;
+}
+
+.burger label {
+  display: none;
+}
+#menu-toggle {
+  display: none;
+}
+
+@media all and (max-width: 1159px) and (min-width: 0px) {
+  .burger label {
+    display: block;
+    height: 10px;
+    width: 70px;
+    line-height: 10px;
+    text-align: center;
+    color: #fff;
+    font-size: 1.8rem;
+    background: #000;
+    cursor: pointer;
+  }
+
+  .liContainer {
+    display: none;
+  }
+
+  #logo-size {
+    height: 40px;
+    width: 40px;
+    margin-top: -9px;
+    margin-left: -70px;
+  }
+
+  .burger li {
+    width: 100%;
+  }
+  .nav {
+    display: block;
+  }
+  .logo-div {
+    width: 100%;
+  }
+
+  .burger {
+    display: block;
+    list-style-type: none;
+    background: black;
+    height: 50px;
+  }
+  .burger ul {
+    text-align: center;
+  }
+  .li {
+    display: inline-block;
+    width: 15%;
+    list-style: none;
+    background: #000;
+    color: #fff;
+  }
+  .burger li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #fff;
+    transition: 0.8s;
+  }
+  .burger li a:hover {
+    background: #1cac83;
+    color: #fff;
+  }
+
+  .burger label {
+    display: none;
+  }
+  #menu-toggle {
+    display: none;
+  }
+  .burger li {
+    width: 100%;
+  }
+  .nav {
+    display: block;
+  }
+}
+.borough {
+  color: #494b54;
+  position: absolute;
+  margin-left: 20px;
+  padding-top: 20px;
+  word-wrap: break-word;
+  list-style: none;
+  width: 30%;
+  height: 90%;
+  overflow: auto;
+}
+
+.marketdetail {
+  padding-top: 25%;
+}
+
+ hr.borderbottom {
+  border-top: 1px solid #494b54;
+list-style: none;
+  width: 30%;
+  height: 90%;
+  overflow: auto;
+  border: 10px red;
+} 
+.imgMarket {
+  width: 70%;
+  border-radius: 5%;
+}
+
+.marketDescription {
+  margin-top: 70%;
+}
+
+.cornImage {
+  width: 7%;
+}
+
+.staticTitle {
+  position: fixed;
+  z-index: 10;
+  background-color: #aaddd2;
+  width: 29%;
+  margin-top: -1.5%;
+}
+
+.li {
+  border-left: 1px solid green;
+  width: 48%;
+  padding-left: 0;
+}
+
+.liContainer {
+  margin-left: 27.8%;
+}
+
+.borough::-webkit-scrollbar {
+  width: 10px;
+}
+
+.borough::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.borough::-webkit-scrollbar-thumb {
+  background: #1cac83;
+}
+
+
+.select-style {
+  padding: 0;
+  margin: 0;
+  border: 1px solid #ccc;
+  width: 120px;
+  border-radius: 3px;
+  overflow: hidden;
+  background-color: #fff;
+  background: #fff;
+  position: relative;
+}
+
+.select-style:after {
+  top: 50%;
+  left: 85%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-color: rgba(0, 0, 0, 0);
+  border-top-color: #000000;
+  border-width: 5px;
+  margin-top: -2px;
+  z-index: 100;
+}
+
+.select-style select {
+  padding: 5px 8px;
+  width: 130%;
+  border: none;
+  box-shadow: none;
+  background-color: transparent;
+  background-image: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.select-style select:focus {
+  outline: none;
+}
+
+.marketTitle {
+  color: black;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+hr.borderbottom {
+  border-top: 0.5px solid rgb(110, 199, 150);
+}
+
+h1 {
+  text-align: center;
+  font-size: 30px;
+}
+
+#about-text {
+  text-align: center;
+}
+
+@media only screen and (max-width: 500px) {
+  #map-container {
+    width: 100%;
+    height: 300px;
+    padding: 1px;
+    margin: 1px;
+    margin-top: 45px;
+  }
+  #market-info {
+    width: 100%;
+  }
+  #menu-toggle {
+    font-size: 3em;
+  }
+  #market-info {
+    float: right;
+    font-size: 1.2em;
+    margin-top: 50px;
+  }
+  .borough {
+    margin-top: 330px;
+    width: 100%;
+  }
+  .staticTitle {
+    position: fixed;
+    z-index: 10;
+    background-color: #aaddd2;
+    width: 100%;
+    margin-top: -1.5%;
+  }
+
+  .burger {
+    position: fixed;
+    width: 100%;
+  }
+}
+
+
+
+
+
+
+
