--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -2,7 +2,7 @@
 /*                 Splash Page              */
 /*------------------------------------------*/
 .splash-container h1, h2, h3, h4, h5, h6, p {
-    margin: 0;
+    margin: -8px;
     padding: 0;
 }
 
